[build-system]
requires = [
    "setuptools>=82",
]

[project]
authors = [{ name = "op200" }]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Multimedia",
    # "Operating System :: MacOS",
    # "Operating System :: POSIX :: Linux",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Information Technology",
    "Typing :: Typed",
]
dependencies = [
    "fonttools>=4.61.1",
    "prompt-toolkit>=3.0.52",
    "pycryptodome>=3.23.0",
    "pyperclip>=1.11.0",
]
dynamic = ["version"]
license = "AGPL-3.0-or-later"
name = "easyrip"
readme = "README.md"
requires-python = ">=3.12"

[project.urls]
Homepage = "https://github.com/op200/EasyRip"
Source   = "https://github.com/op200/EasyRip"

[project.scripts]
easyrip = "easyrip.__main__:run"

[tool.setuptools.dynamic]
version = { attr = "easyrip.global_val.PROJECT_VERSION" }

[tool.setuptools.package-dir]
easyrip = "easyrip"

[tool.setuptools.package-data]
easyrip = ["resources/**/*"]
